--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "* Implement Jest to verify that objects were created properly.\r * Learned the TDD cycle: Red (fail), Green (pass), Refactor.\r * Wrote a constructor function to generate new objects.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/CHaskin91/Jest-Another-RPG#readme",
   "dependencies": {
     "inquirer": "^8.2.0"
+  },
+  "devDependencies": {
+    "jest": "^27.4.7"
   }
 }
